# Design-Pattern

./: .gitignore  CMakeLists.txt  README.md
20211001-Bridge/: CMakeLists.txt  README.md
20211001-Bridge/.readme/: bridge.plantuml
20211001-Bridge/include/: abstraction.hpp  abstraction_impl.hpp
20211001-Bridge/src/: abstraction.cpp  abstraction_impl.cpp  main.cpp
20211005-Composite/: CMakeLists.txt  README.md
20211005-Composite/.readme/: composite.plantuml
20211005-Composite/include/: component.hpp  composite.hpp  leaf.hpp
20211005-Composite/src/: composite.cpp  main.cpp
